dynamically_typed_tests/invalid/expression/moreArrExpr.wacc
# program performs boolean operations on arrays

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  x = [1,2];
  y = [3,4];
  println x > y
end
